fixed the button-wrapping bug reported by amanda

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -191,7 +191,8 @@ breadcrumb:hover {
 	border: 1px solid #004486;
 	background-color: #004486;
 	color: #FFF;
-	text-shadow: 1px 1px 2px rgba(0,0,0,0.2);	
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+	white-space: nowrap;
 }
 .mycelium_btn, input.mycelium_btn {
 	font-size: 18px;
